--- a/participante.html
+++ b/participante.html
@@ -16,8 +16,8 @@
 				<a href="index.html">
 					<li>Home</li>
 				</a>
-				<a href="participe.html">
-					<li>Participe</li>
+				<a href="participante.html">
+					<li>Participante</li>
 				</a>
 				<a href="index.html #quem-somos">
 					<li>Quem Somos</li>
@@ -32,8 +32,8 @@
 				<a href="index.html">
 					<li>Home</li>
 				</a>
-				<a href="participe.html">
-					<li>Participe</li>
+				<a href="participante.html">
+					<li>Participante</li>
 				</a>
 				<a href="#quem-somos" goto="contato">
 					<li>Quem Somos</li>
@@ -42,50 +42,7 @@
 		</div>
 	</div>
 
-<!-- <section class="formulario">
-	<div class="container">
-		<form>
-			<h2>Cadastre-se</h2>
-			<div class="form-gp flex">
-				<div class="w50">
-					<label>Nome</label>
-					<input type="text" name="nome">
-				</div>
-				<div class="w50">
-					<label>CPF</label>
-					<input type="text" name="nome">
-				</div>
-			</div>
-			<div class="form-gp flex">
-				<div class="w50">
-					<label>Celular</label>
-					<input type="text" name="nome">
-				</div>
-				<div class="w50">
-					<label>Email</label>
-					<input type="text" name="nome">
-				</div>
-			</div>
-			<div class="form-gp flex">
-				<div class="w50">
-					<label>CEP</label>
-					<input type="text" name="nome">
-				</div>
-				<div class="w50">
-					<label>idade</label>
-					<input type="text" name="nome">
-				</div>
-			</div>
-		</form>
-	</div>
-</section> -->
-<a href="#abrirModal">Open Modal</a>
 
-<div id="abrirModal" class="modal">
-  <h2>Janela Modal</h2>
-  <p>Esta é uma simples janela de modal.</p>
-  <p>Você pode fazer qualquer coisa aqui, página de Login, pop-ups, ou formulários</p>
-</div>
 
 <div class="foot-topo"></div>
 <footer>
